{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 38,
  "lineage": "5d046887-d2da-d8f7-5343-c672bd154abf",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375811730843:vpc/vpc-d1535bb5",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-3b13ea52",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-440c2f21",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-d1535bb5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-e60db881",
            "owner_id": "375811730843"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cbf2c28ff43cabcd",
            "arn": "arn:aws:ec2:us-east-1:375811730843:elastic-ip/eipalloc-0cbf2c28ff43cabcd",
            "association_id": "eipassoc-0cd8b1e914c51b0b8",
            "domain": "vpc",
            "id": "eipalloc-0cbf2c28ff43cabcd",
            "instance": "i-0cabc9d02a2fb09d4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0896f2f2b05c7f39f",
            "private_dns": "ip-172-31-2-148.ec2.internal",
            "private_ip": "172.31.2.148",
            "public_dns": "ec2-3-234-123-90.compute-1.amazonaws.com",
            "public_ip": "3.234.123.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "breadnotes-ec2-eip",
              "Project": "breadnotes"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "breadnotes-ec2-eip",
              "Project": "breadnotes"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e95a5e2743ec9ec9",
            "arn": "arn:aws:ec2:us-east-1:375811730843:instance/i-0cabc9d02a2fb09d4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "breadnotes-ec2-profile",
            "id": "i-0cabc9d02a2fb09d4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "breadnotes-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0896f2f2b05c7f39f",
            "private_dns": "ip-172-31-2-148.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.148",
            "public_dns": "ec2-3-234-123-90.compute-1.amazonaws.com",
            "public_ip": "3.234.123.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-073588365a3a11f85",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "breadnotes-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-3290e444",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "breadnotes-api-server",
              "Project": "breadnotes"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "breadnotes-api-server",
              "Project": "breadnotes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ece97fcb41884636"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2_role",
            "aws_key_pair.main",
            "aws_s3_bucket.dev_images",
            "aws_security_group.ec2",
            "data.aws_ami.amazon_linux",
            "data.aws_vpc.default",
            "random_string.dev_bucket_suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375811730843:security-group/sg-0ece97fcb41884636",
            "description": "Security group for EC2 FastAPI server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ece97fcb41884636",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from CloudFront",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "breadnotes-ec2-sg",
            "name_prefix": "",
            "owner_id": "375811730843",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "breadnotes-ec2-sg",
              "Project": "breadnotes"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "breadnotes-ec2-sg",
              "Project": "breadnotes"
            },
            "timeouts": null,
            "vpc_id": "vpc-d1535bb5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375811730843:security-group/sg-04808e7ee81392753",
            "description": "Security group for RDS PostgreSQL",
            "egress": [],
            "id": "sg-04808e7ee81392753",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ece97fcb41884636"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "breadnotes-rds-sg",
            "name_prefix": "",
            "owner_id": "375811730843",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "breadnotes-rds-sg",
              "Project": "breadnotes"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "breadnotes-rds-sg",
              "Project": "breadnotes"
            },
            "timeouts": null,
            "vpc_id": "vpc-d1535bb5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}